--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
                         </td>
                         <td>
                             {% if p['imagen'] %}
-                                <img src="{{ url_for('static', filename='uploads/' ~ p['imagen']) }}" alt="Imagen producto" style="max-width:60px; max-height:60px; border-radius:6px; cursor:pointer; border:1px solid #ccc;" onclick="mostrarImagenGrandeTabla(this)">
+                                <img src="{{ p['imagen'] }}" alt="Imagen producto" style="max-width:60px; max-height:60px; border-radius:6px; cursor:pointer; border:1px solid #ccc;" onclick="mostrarImagenGrandeTabla(this)">
                             {% else %}
                                 <span style="color:#aaa;font-size:0.9em;">Sin imagen</span>
                             {% endif %}
